<resources>
    <string name="app_name">File picker</string>
    <string name="title_activity_browse_path" translatable="false">BrowsePathActivity</string>
    <string name="action_settings">Settings</string>
    <string name="device">Storage</string>
    <string name="dlna_node" translatable="false">DLNA</string>
    <string name="samba_node" translatable="false">Samba</string>
    <string name="notice_for_request_permission">Please grant the permision or the app can\'t work.</string>
    <string name="select_dir_notice">Long press \"OK\" to chose direcotry</string>
    <string name="add_directory">Add Directory</string>
    <string name="directory">Directory: %1$s</string>
    <string name="last_modify_date">Modified: %1$s</string>
    <string name="make_private">Make directory private</string>
    <string name="add_directory_dilog_title">Notice</string>
    <string name="samba_access_to">Access to: %1$s</string>
    <string name="anonymous_access">Anonymous</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_cannot_empty">Username can\'t be empty.</string>
    <string name="samba_access_error">Can\'t get files, try again please.</string>
    <string name="login_failed_try_again">Auth failed, try again please.</string>
    <string name="no_files">No files</string>
    <string name="select_file_test" translatable="false">Select file test</string>
    <string name="selected">Selected: %1$s</string>
    <string name="smb_url_hint">Url, e.g. smb://mypc/myshare/</string>
    <string name="add_smb">Add new samba</string>
    <string name="url_cannot_empty">Url can\'t be empty.</string>
    <string name="not_a_directory">Url must be a directory or share.</string>
    <string name="can_not_access">Can\'t access this url.</string>
    <string name="url_is_invalid">Url is invalid.</string>
    <string name="must_end_with_divide">Url must ends with \"/\".</string>
    <string name="external_storage">Internal Storage</string>
    <string name="udisk_name">U-Disk (%1$s)</string>
    <string name="sdcard_name">TFCard (%1$s)</string>
    <string name="pcie_name">M.2 SSD (%1$s)</string>
    <string name="sata_name">HardDisk (%1$s)</string>
</resources>
