<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firefly.filepicker.picker.browse.BrowsePathFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="#38383b"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/title_icon"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/add_directory"
                android:textColor="@color/textColor"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/ibtn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:background="@drawable/dialog_button_selector_2"
                android:src="@drawable/ic_back_service"></ImageButton>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@color/colorPrimary"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/type_container"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:focusable="true"
                    android:paddingTop="18dp"
                    android:paddingBottom="0dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/status_bar"
                    android:fadeScrollbars="false"
                    android:fillViewport="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarSize="6dp"
                    android:scrollbarThumbVertical="@drawable/vertical_scroll_bar_thumb"
                    android:scrollbarTrackVertical="@drawable/vertical_scroll_bar_track"
                    android:scrollbars="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fadeScrollbars="false"
                        android:focusable="true"
                        android:paddingTop="18dp"
                        android:paddingBottom="0dp"
                        android:scrollbarAlwaysDrawVerticalTrack="false"
                        android:scrollbars="vertical"
                        android:visibility="visible" />
                </android.support.v4.widget.NestedScrollView>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/categorySelectedColor" />

                <RelativeLayout
                    android:id="@+id/empty_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/empty_text"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:text="@string/no_files"
                        android:textSize="16sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/status_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:baselineAligned="true"
                    android:elevation="1dp"
                    android:orientation="horizontal"
                    android:paddingStart="26dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="26dp"
                    android:paddingBottom="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/focused_dir"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:maxWidth="200dp"
                            android:singleLine="true"
                            android:text="@string/selected"
                            android:textColor="@color/textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/last_modified"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/last_modify_date"
                            android:textColor="@color/textColor"
                            android:textSize="14sp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="8dp"
                            android:visibility="gone"
                            android:layout_toStartOf="@+id/textView4"
                            android:src="@mipmap/ok" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:text="@string/select_dir_notice"
                            android:textColor="@color/textColor"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
